0x0B-malloc_free/0-create_array.c:13:3:
f (array == NULL)
      |   ^~
0-create_array.c:12:2: error: ISO C90 forbids mixed declarations and code [-Werror=declaration-after-statement]
   12 |  char *array = malloc(size * sizeof(char))
      |  ^~~~
0-create_array.c:15:7: error: ‘i’ undeclared (first use in this function)
   15 |  for (i = 0; i < size; i++)
      |       ^
0-create_array.c:15:7: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
